--- a/package.json
+++ b/package.json
@@ -6,35 +6,43 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.0",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.468.0",
+    "mongoose": "^8.0.0",
     "next": "16.1.4",
+    "next-auth": "^4.24.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "mongoose": "^8.0.0",
-    "next-auth": "^4.24.0",
-    "bcryptjs": "^2.4.3",
-    "zustand": "^4.4.0",
     "react-hook-form": "^7.49.0",
-    "@hookform/resolvers": "^3.3.0",
-    "zod": "^3.22.0",
-    "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0",
-    "lucide-react": "^0.468.0",
-    "class-variance-authority": "^0.7.0"
+    "zod": "^3.22.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@jest/globals": "^30.2.0",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/bcryptjs": "^2.4.6",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
-    "tailwindcss": "^4",
-    "typescript": "^5",
+    "jest": "^30.2.0",
+    "mongodb-memory-server": "^11.0.1",
     "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.0"
+    "prettier-plugin-tailwindcss": "^0.5.0",
+    "tailwindcss": "^4",
+    "ts-jest": "^29.4.6",
+    "typescript": "^5"
   }
 }
