--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.49.0",
+    "reactflow": "^11.11.4",
     "sharp": "^0.34.5",
     "tailwind-merge": "^2.0.0",
     "zod": "^3.22.0",
